@@ -1,3 +1,7 @@
+2011-09-24  Petasis George  <petasis@iit.demokritos.gr>
+        * win/OleDND.h: Added definition of WINVER to version 5, when compiling
+        with MinGW, which defines it with version 4. SF Bug ID: 3411338.
+
 2011-09-23  Petasis George  <petasis@iit.demokritos.gr>
         * win/OleDND.h: Modified STRING_(s), to ease compilation with MinGW.
         Patch provided by Hans-Christoph Steiner. SF Bug ID: 3411338.
